[package]
name = "crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
chacha20poly1305 = "0.10"
# rust-argon2 2.0 版本比 1.0 版本慢很多很多，因此测试新版本后再替换
rust-argon2 = "1.0"
anyhow = "1.0"
# hex = "0.4"